--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.11.0",
     "@react-icons/all-files": "^4.1.0",
     "aos": "^2.3.4",
     "autoprefixer": "10.4.14",
@@ -19,6 +20,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.44.2",
     "react-icons": "^4.8.0",
+    "react-toastify": "^9.1.3",
     "swiper": "^9.3.2",
     "tailwindcss": "3.3.2"
   }
